--- a/index.html
+++ b/index.html
@@ -9,8 +9,271 @@
 </head>
 
 <body>
+    <h1>Основные команды терминала на Windows10</h1>
     <br>
     <br>
+    <dl>
+        <dt> ASSOC
+            <dd> Displays or modifies file extension associations.</dd>
+        </dt>
+        <dt> ATTRIB
+            <dd>Displays or changes file attributes.</dd>
+        </dt>
+        <dt> BREAK
+            <dd>Sets or clears extended CTRL+C checking.</dd>
+        </dt>
+        <dt> BCDEDIT
+            <dd>Sets properties in boot database to control boot loading.</dd>
+        </dt>
+        <dt> CACLS
+            <dd>Displays or modifies access control lists (ACLs) of files.</dd>
+        </dt>
+        <dt> CALL
+            <dd>Calls one batch program from another.</dd>
+        </dt>
+        <dt> CD
+            <dd>Displays the name of or changes the current directory.</dd>
+        </dt>
+        <dt> CHCP
+            <dd>Displays or sets the active code page number.</dd>
+        </dt>
+        <dt> CHDIR
+            <dd>Displays the name of or changes the current directory.</dd>
+        </dt>
+        <dt> CHKDSK
+            <dd>Checks a disk and displays a status report.</dd>
+        </dt>
+        <dt> CHKNTFS
+            <dd>Displays or modifies the checking of disk at boot time.</dd>
+        </dt>
+        <dt> CLS
+            <dd>Clears the screen.</dd>
+        </dt>
+        <dt> CMD
+            <dd>Starts a new instance of the Windows command interpreter.</dd>
+        </dt>
+        <dt> COLOR
+            <dd>Sets the default console foreground and background colors.</dd>
+        </dt>
+        <dt> COMP
+            <dd>Compares the contents of two files or sets of files.</dd>
+        </dt>
+        <dt> COMPACT
+            <dd>Displays or alters the compression of files on NTFS partitions.</dd>
+        </dt>
+        <dt> CONVERT
+            <dd>Converts FAT volumes to NTFS.  You cannot convert the current drive.</dd>
+        </dt>
+        <dt> COPY
+            <dd>Copies one or more files to another location.</dd>
+        </dt>
+        <dt> DATE
+            <dd>Displays or sets the date.</dd>
+        </dt>
+        <dt> DEL
+            <dd> Deletes one or more files.</dd>
+        </dt>
+        <dt> DIR
+            <dd>Displays a list of files and subdirectories in a directory.</dd>
+        </dt>
+        <dt> DISKPART
+            <dd>Displays or configures Disk Partition properties.</dd>
+        </dt>
+        <dt> DOSKEY
+            <dd>Edits command lines, recalls Windows commands, and
+                creates macros.</dd>
+        </dt>
+        <dt> DRIVERQUERY
+            <dd>Displays current device driver status and properties.</dd>
+        </dt>
+        <dt> ECHO
+            <dd>Displays messages, or turns command echoing on or off.</dd>
+        </dt>
+        <dt> ENDLOCAL
+            <dd>Ends localization of environment changes in a batch file.</dd>
+        </dt>
+        <dt> ERASE
+            <dd>Deletes one or more files.</dd>
+        </dt>
+        <dt> EXIT
+            <dd>Quits the CMD.EXE program (command interpreter).</dd>
+        </dt>
+        <dt> FC
+            <dd>Compares two files or sets of files, and displays the
+                differences between them.</dd>
+        </dt>
+        <dt> FIND
+            <dd>Searches for a text string in a file or files.</dd>
+        </dt>
+        <dt> FINDSTR 
+            <dd>Searches for strings in files.</dd>
+        </dt>
+        <dt> FOR 
+            <dd>Runs a specified command for each file in a set of files.</dd>
+        </dt>
+        <dt> FORMAT
+            <dd>Formats a disk for use with Windows.(слышал в детстве анекдот...(паапа папапа а format dic c complite хорошая надпись?)</dd>
+        </dt>
+        <dt> FSUTIL
+            <dd>Displays or configures the file system properties.</dd>
+        </dt>
+        <dt> FTYPE
+            <dd>Displays or modifies file types used in file extension associations.</dd>
+        </dt>
+        <dt> GOTO 
+            <dd>Directs the Windows command interpreter to a labeled line in a batch program.</dd>
+        </dt>
+        <dt> GPRESULT
+            <dd>Displays Group Policy information for machine or user.</dd>
+        </dt>
+        <dt> GRAFTABL
+            <dd>Enables Windows to display an extended character set in
+                graphics mode.</dd>
+        </dt>
+        <dt> HELP
+            <dd>Provides Help information for Windows commands.(Вообще как для меня самая важная функция,работает везде все команды прописывпает и детеальное описание,знать все невозможно,а знать где искать необходимо)</dd>
+        </dt>
+        <dt>ICACLS 
+            <dd>Display, modify, backup, or restore ACLs for files and directories.</dd>
+        </dt>
+        <dt>IF
+            <dd>Performs conditional processing in batch programs.</dd>
+        </dt>
+        <dt>LABEL
+            <dd>Creates, changes, or deletes the volume label of a disk.</dd>
+        </dt>
+        <dt>MD
+            <dd>Creates a directory.</dd>
+        </dt>
+        <dt>MKDIR
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+        <dt>
+            <dd></dd>
+        </dt>
+    </dl>
+    <span>    
+                     
+                  Creates a directory.
+        MKLINK         Creates Symbolic Links and Hard Links
+        MODE           Configures a system device.
+        MORE           Displays output one screen at a time.
+        MOVE           Moves one or more files from one directory to another
+                       directory.
+        OPENFILES      Displays files opened by remote users for a file share.
+        PATH           Displays or sets a search path for executable files.
+        PAUSE          Suspends processing of a batch file and displays a message.
+        POPD           Restores the previous value of the current directory saved by
+                       PUSHD.
+        PRINT          Prints a text file.
+        PROMPT         Changes the Windows command prompt.
+        PUSHD          Saves the current directory then changes it.
+        RD             Removes a directory.
+        RECOVER        Recovers readable information from a bad or defective disk.
+        REM            Records comments (remarks) in batch files or CONFIG.SYS.
+        REN            Renames a file or files.
+        RENAME         Renames a file or files.
+        REPLACE        Replaces files.
+        RMDIR          Removes a directory.
+        ROBOCOPY       Advanced utility to copy files and directory trees
+        SET            Displays, sets, or removes Windows environment variables.
+        SETLOCAL       Begins localization of environment changes in a batch file.
+        SC             Displays or configures services (background processes).
+        SCHTASKS       Schedules commands and programs to run on a computer.
+        SHIFT          Shifts the position of replaceable parameters in batch files.
+        SHUTDOWN       Allows proper local or remote shutdown of machine.
+        SORT           Sorts input.
+        START          Starts a separate window to run a specified program or command.
+        SUBST          Associates a path with a drive letter.
+        SYSTEMINFO     Displays machine specific properties and configuration.
+        TASKLIST       Displays all currently running tasks including services.
+        TASKKILL       Kill or stop a running process or application.
+        TIME           Displays or sets the system time.
+        TITLE          Sets the window title for a CMD.EXE session.
+        TREE           Graphically displays the directory structure of a drive or
+                       path.
+        TYPE           Displays the contents of a text file.
+        VER            Displays the Windows version.
+        VERIFY         Tells Windows whether to verify that your files are written
+                       correctly to a disk.
+        VOL            Displays a disk volume label and serial number.
+        XCOPY          Copies files and directory trees.
+        WMIC           Displays WMI information inside interactive command shell.</span>
     <br>
     <br>
     <br>
