--- a/index.html
+++ b/index.html
@@ -133,147 +133,143 @@
         <dt> HELP
             <dd>Provides Help information for Windows commands.(Вообще как для меня самая важная функция,работает везде все команды прописывпает и детеальное описание,знать все невозможно,а знать где искать необходимо)</dd>
         </dt>
-        <dt>ICACLS 
+        <dt> ICACLS 
             <dd>Display, modify, backup, or restore ACLs for files and directories.</dd>
         </dt>
-        <dt>IF
+        <dt> IF
             <dd>Performs conditional processing in batch programs.</dd>
         </dt>
-        <dt>LABEL
+        <dt> LABEL
             <dd>Creates, changes, or deletes the volume label of a disk.</dd>
         </dt>
-        <dt>MD
+        <dt> MD
             <dd>Creates a directory.</dd>
         </dt>
-        <dt>MKDIR
-            <dd></dd>
+        <dt> MKDIR
+            <dd>Creates a directory.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> MKLINK
+            <dd>Creates Symbolic Links and Hard Links</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> MODE
+            <dd>Configures a system device.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> MORE
+            <dd>Displays output one screen at a time.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> MOVE
+            <dd> Moves one or more files from one directory to another directory.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> OPENFILES
+            <dd>Displays files opened by remote users for a file share.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> PATH
+            <dd>Displays or sets a search path for executable files.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> PAUSE
+            <dd>Suspends processing of a batch file and displays a message.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> POPD
+            <dd>Restores the previous value of the current directory saved by PUSHD.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> PRINT
+            <dd>Prints a text file.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> PROMPT
+            <dd>Changes the Windows command prompt.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> PUSHD
+            <dd>Saves the current directory then changes it.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> RD
+            <dd>Removes a directory.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> RECOVER
+            <dd>Recovers readable information from a bad or defective disk.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> REM
+            <dd>Records comments (remarks) in batch files or CONFIG.SYS.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> REN
+            <dd>Renames a file or files.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> RENAME
+            <dd>Renames a file or files.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> REPLACE
+            <dd>Replaces files.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> RMDIR
+            <dd>Removes a directory.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> ROBOCOPY
+            <dd>Advanced utility to copy files and directory trees</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> SET 
+            <dd>Displays, sets, or removes Windows environment variables.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> SETLOCAL
+            <dd>Begins localization of environment changes in a batch file.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> SC
+            <dd>Displays or configures services (background processes).</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> SCHTASKS
+            <dd>Schedules commands and programs to run on a computer.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> SHIFT
+            <dd>Shifts the position of replaceable parameters in batch files.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> SHUTDOWN
+            <dd>Allows proper local or remote shutdown of machine.</dd>
         </dt>
-        <dt>
-            <dd></dd>
+        <dt> SORT  
+            <dd>Sorts input.</dd>
         </dt>
+        <dt> START
+            <dd>Starts a separate window to run a specified program or command.</dd>
+        </dt>
+        <dt> SUBST
+            <dd>Associates a path with a drive letter.</dd>
+        </dt>
+        <dt> SYSTEMINFO
+            <dd>Displays machine specific properties and configuration.</dd>
+        </dt>
+        <dt> TASKLIST
+            <dd>Displays all currently running tasks including services.</dd>
+        </dt>
+        <dt> TASKKILL
+            <dd>Kill or stop a running process or application.</dd>
+        </dt>
+        <dt> TIME
+            <dd>Displays or sets the system time.</dd>
+        </dt>
+        <dt> TITLE 
+            <dd>Sets the window title for a CMD.EXE session.</dd>
+        </dt>
+        <dt> TREE
+            <dd>Graphically displays the directory structure of a drive or path.</dd>
+        </dt>
+        <dt> TYPE 
+            <dd>Displays the contents of a text file.</dd>
+        </dt>
+        <dt> VER  
+            <dd>Displays the Windows version.</dd>
+        </dt>
+        <dt> VERIFY
+            <dd>Tells Windows whether to verify that your files are written correctly to a disk.</dd>
+        </dt>
+        <dt> VOL
+            <dd>Displays a disk volume label and serial number.</dd>
+        </dt>
+        <dt> XCOPY
+            <dd>Copies files and directory trees.</dd>
+        </dt>
+        <dt> WMIC
+            <dd>Displays WMI information inside interactive command shell.</dd>
+        </dt>
+ 
     </dl>
-    <span>    
-                     
-                  Creates a directory.
-        MKLINK         Creates Symbolic Links and Hard Links
-        MODE           Configures a system device.
-        MORE           Displays output one screen at a time.
-        MOVE           Moves one or more files from one directory to another
-                       directory.
-        OPENFILES      Displays files opened by remote users for a file share.
-        PATH           Displays or sets a search path for executable files.
-        PAUSE          Suspends processing of a batch file and displays a message.
-        POPD           Restores the previous value of the current directory saved by
-                       PUSHD.
-        PRINT          Prints a text file.
-        PROMPT         Changes the Windows command prompt.
-        PUSHD          Saves the current directory then changes it.
-        RD             Removes a directory.
-        RECOVER        Recovers readable information from a bad or defective disk.
-        REM            Records comments (remarks) in batch files or CONFIG.SYS.
-        REN            Renames a file or files.
-        RENAME         Renames a file or files.
-        REPLACE        Replaces files.
-        RMDIR          Removes a directory.
-        ROBOCOPY       Advanced utility to copy files and directory trees
-        SET            Displays, sets, or removes Windows environment variables.
-        SETLOCAL       Begins localization of environment changes in a batch file.
-        SC             Displays or configures services (background processes).
-        SCHTASKS       Schedules commands and programs to run on a computer.
-        SHIFT          Shifts the position of replaceable parameters in batch files.
-        SHUTDOWN       Allows proper local or remote shutdown of machine.
-        SORT           Sorts input.
-        START          Starts a separate window to run a specified program or command.
-        SUBST          Associates a path with a drive letter.
-        SYSTEMINFO     Displays machine specific properties and configuration.
-        TASKLIST       Displays all currently running tasks including services.
-        TASKKILL       Kill or stop a running process or application.
-        TIME           Displays or sets the system time.
-        TITLE          Sets the window title for a CMD.EXE session.
-        TREE           Graphically displays the directory structure of a drive or
-                       path.
-        TYPE           Displays the contents of a text file.
-        VER            Displays the Windows version.
-        VERIFY         Tells Windows whether to verify that your files are written
-                       correctly to a disk.
-        VOL            Displays a disk volume label and serial number.
-        XCOPY          Copies files and directory trees.
-        WMIC           Displays WMI information inside interactive command shell.</span>
     <br>
     <br>
     <br>
