--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <ul>
         <li>clone</li>
         <li>Clone a repository into a new directory</li>
-        <li></li>
+        <li>Это не ошибка а место под кометнарии своими словами,буду использовать как шпоргалку</li>
     </ul>
     <ul>
         <li>init</li>
