add-online-crib

--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
     <br>
 </body>
 <footer>
+    <a href="https://training.github.com/downloads/ru/github-git-cheat-sheet/">ни один я такой шпоргалка на русском</a>
     <br>
     <a href="./pages/gallery.html">Галерея</a>
     <br>
