added front weight to names command git

--- a/index.html
+++ b/index.html
@@ -272,49 +272,49 @@
     </dl>
     <h1>Основные команды Git в терминале</h1>
     <ul>
-        <li>clone</li>
+        <li class="FontWeightBold">clone</li>
         <li>Clone a repository into a new directory</li>
-        <li>init</li>
+        <li class="FontWeightBold">init</li>
         <li>Create an empty Git repository or reinitialize an existing one</li>
-        <li>add</li>
+        <li class="FontWeightBold">add</li>
         <li>Add file contents to the index</li>
-        <li>mv</li>
+        <li class="FontWeightBold">mv</li>
         <li>Move or rename a file, a directory, or a symlink</li>
-        <li>restore</li>
+        <li class="FontWeightBold">restore</li>
         <li>Restore working tree files</li>
-        <li>rm</li>
+        <li class="FontWeightBold">rm</li>
         <li>Remove files from the working tree and from the index</li>
-        <li>bisect</li>
+        <li class="FontWeightBold">bisect</li>
         <li>Use binary search to find the commit that introduced a bug</li>
-        <li>diff</li>
+        <li class="FontWeightBold">diff</li>
         <li>Show changes between commits, commit and working tree, etc</li>
-        <li>grep</li>
+        <li class="FontWeightBold">grep</li>
         <li>Print lines matching a pattern</li>
-        <li>log</li>
+        <li class="FontWeightBold">log</li>
         <li>Show commit logs</li>
-        <li>show</li>
+        <li class="FontWeightBold">show</li>
         <li>Show various types of objects</li>
-        <li>status</li>
+        <li class="FontWeightBold">status</li>
         <li>Show the working tree status</li>
-        <li>branch</li>
+        <li class="FontWeightBold">branch</li>
         <li>List, create, or delete branches</li>
-        <li>commit</li>
+        <li class="FontWeightBold">commit</li>
         <li>Record changes to the repository</li>
-        <li>merge</li>
+        <li class="FontWeightBold">merge</li>
         <li>Join two or more development histories together</li>
-        <li>rebase</li>
+        <li class="FontWeightBold">rebase</li>
         <li>Reapply commits on top of another base tip</li>
-        <li>reset</li>
+        <li class="FontWeightBold">reset</li>
         <li>Reset current HEAD to the specified state</li>
-        <li>switch</li>
+        <li class="FontWeightBold">switch</li>
         <li>Switch branches</li>
-        <li>tag</li>
+        <li class="FontWeightBold">tag</li>
         <li>Create, list, delete or verify a tag object signed with GPG</li>
-        <li>fetch</li>
+        <li class="FontWeightBold">fetch</li>
         <li>Download objects and refs from another repository</li>
-        <li>pull</li>
+        <li class="FontWeightBold">pull</li>
         <li>Fetch from and integrate with another repository or a local branch</li>
-        <li>push</li>
+        <li class="FontWeightBold">push</li>
         <li>Update remote refs along with associated objects</li>
     </ul>
 </body>
