edit critical errors in gallery

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -16,12 +16,7 @@
     <img src="../img/img.jpg" alt="катринка в папке">
 </body>
 <footer>
-    <br>
-    <a href="../index.html">На титульную</a>
-    <br>
-    <a href="about.html">Опыт работы</a>
-    <br>
-    <a href="contacts.html">Контакты</a>
+    <a href="../index.html">В шпаргалку</a>
 </footer>
 
 </html>
