--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
         <dd>Runs a specified command for each file in a set of files.</dd>
         </dt>
         <dt> FORMAT
-        <dd>Formats a disk for use with Windows.(слышал в детстве анекдот...(паапа папапа а format dick c complite
-            хорошая надпись?)</dd>
+        <dd>Formats a disk for use with Windows.</dd>
+        <dd>слышал в детстве анекдот...(паапа папапа а format dick c complite
+            хорошая надпись?</dd>
         </dt>
         <dt> FSUTIL
         <dd>Displays or configures the file system properties.</dd>
@@ -131,8 +132,10 @@
             graphics mode.</dd>
         </dt>
         <dt> HELP
-        <dd>Provides Help information for Windows commands.(Вообще как для меня самая важная функция,работает везде все
-            команды прописывпает и детеальное описание,знать все невозможно,а знать где искать необходимо)</dd>
+        <dd>Provides Help information for Windows commands.
+        </dd>
+        <dd>Вообще как для меня самая важная функция,работает везде все команды прописывпает и детеальное
+            описание,знать все невозможно,а знать где искать необходимо</dd>
         </dt>
         <dt> ICACLS
         <dd>Display, modify, backup, or restore ACLs for files and directories.</dd>
