после git commit --amend

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
         <li>List, create, or delete branches</li>
         <li class="FontWeightBold">commit</li>
         <li>Record changes to the repository</li>
+        <li>после git commit --amend нажимается Esc, вводится :wq и нажимается Enter</li>
         <li class="FontWeightBold">merge</li>
         <li>Join two or more development histories together</li>
         <li class="FontWeightBold">rebase</li>
@@ -322,7 +323,7 @@
     </ul>
 </body>
 <footer>
-    <a href="https://training.github.com/downloads/ru/github-git-cheat-sheet/">ни один я такой шпоргалка на русском</a>
+    <a href="https://training.github.com/downloads/ru/github-git-cheat-sheet/">шпаргалка на русском</a>
     <a href="./pages/gallery.html">Галерея</a>
 </footer>
 
